updated on 11-oct-2021
updated on 11-oct-2021

--- a/blog/public/css/style.css
+++ b/blog/public/css/style.css
@@ -526,7 +526,7 @@ display: flex;
     grid-template-columns: 250px 115px 65px 0px ;
 
 }
-.profiletitle a{
+.profiletitle_a{
 	text-decoration: none;
 	color: #868081;
 	padding: 10px;
@@ -534,23 +534,33 @@ display: flex;
 
 }
 
-.profiletitle button{
+.profiletitle_b{
 	margin: 17px;
 	font-size: 12px;
 	color: #000000;
 	font-weight: bold;
 	background: #ffffff;
 }
-.profiletitle .btn:focus,.profiletitle .btn:active{
+
+.profiletitle_b a{
+	text-decoration: none;
+	color: #868081;
+}
+.profiletitle .profiletitle_b:focus,.profiletitle .profiletitle_b:active{
    outline: none !important;
    box-shadow: none;
 }
-
-
-.profiletitle .btn:hover{
+.profiletitle .profiletitle_b:hover{
 	font-weight: bold;
 	color: #000000;
 	background: #ffffff;
+}
+
+.profiletitle .profiletitle_a:hover{
+	text-decoration: none;
+	color: #868081;
+	padding: 10px;
+    font-size: 28px;
 }
 
 .profiletitle img{
